finish: now can choose to add instruction to a chosen line